force-app/main/default/objects/Plan__c/fields/Abandon_Plan_Review__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Plan_Review__c</fullName>
    <description>At Risk = No payroll report or distributions processed in 9-12 months.   
Potentially Abandoned = No payroll report or distributions processed in 12+ months.</description>
    <inlineHelpText>At Risk = No payroll report or distributions processed in 9-12 months.   
Potentially Abandoned = No payroll report or distributions processed in 12+ months.</inlineHelpText>
    <label>Abandoned Plan Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Potentially Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>