force-app/main/default/objects/Plan__c/fields/Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>Active_Employees__c</fullName>
    <description>Total Employees on Census - Terminated Employees.   Confirms how many employees on census are currently employed.</description>
    <inlineHelpText>Total Employees on Census - Terminated Employees.   Confirms how many employees on census are currently employed.</inlineHelpText>
    <label>Active Employees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>