force-app/main/default/objects/Plan__c/fields/Amendments_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Amendments_This_Year__c</fullName>
    <label>Amendments This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>