force-app/main/default/objects/Plan__c/fields/Amount_Due_On_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_On_Invoices__c</fullName>
    <formula>Account__r.Amount_Due_on_Invoices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due on Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>