force-app/main/default/objects/Plan__c/fields/Annual_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contributions__c</fullName>
    <description>Annual contributions made in the last Calendar year. Will be blank for new plans.</description>
    <inlineHelpText>Annual contributions made in the last Calendar year.  Will be blank for new plans.</inlineHelpText>
    <label>Annual Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>