force-app/main/default/objects/Plan__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <description>ARR is the yearly revenue from active subscriptions and/or recurring fees.  Monthly revenue field x12.</description>
    <formula>Monthly_Recurring_Revenue_MRR__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ARR is the yearly revenue from active subscriptions and/or recurring fees.</inlineHelpText>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>