force-app/main/default/objects/Plan__c/fields/Associated_Partners__c.field-meta.xml
<CustomField>
    <fullName>Associated_Partners__c</fullName>
    <label>Associated Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>