force-app/main/default/objects/Plan__c/fields/Auto_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for data mapping from FT Williams. Does plan have AE?</description>
    <inlineHelpText>Used for data mapping from FT Williams. Does plan have AE?</inlineHelpText>
    <label>Auto-Enroll</label>
    <type>Checkbox</type>
</CustomField>