force-app/main/default/objects/Plan__c/fields/Auto_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment__c</fullName>
    <description>What are the Auto-Enrollment settings for the plan?</description>
    <inlineHelpText>What are the Auto-Enrollment settings for the plan?</inlineHelpText>
    <label>Auto-Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>EACA</fullName>
            </value>
            <value>
                <fullName>QACA</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>2 Year Cliff</fullName>
                <isActive>false</isActive>
                <label>2 Year Cliff</label>
            </value>
            <value>
                <fullName>20% Over 5 Years</fullName>
                <isActive>false</isActive>
                <label>20% Over 5 Years</label>
            </value>
            <value>
                <fullName>20% Over 6 Years</fullName>
                <isActive>false</isActive>
                <label>20% Over 6 Years</label>
            </value>
            <value>
                <fullName>25% Over 4 Years</fullName>
                <isActive>false</isActive>
                <label>25% Over 4 Years</label>
            </value>
            <value>
                <fullName>3 Year Cliff</fullName>
                <isActive>false</isActive>
                <label>3 Year Cliff</label>
            </value>
            <value>
                <fullName>Immediate</fullName>
                <isActive>false</isActive>
                <label>Immediate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>