force-app/main/default/objects/Plan__c/fields/Auto_Enrollment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment_Plan__c</fullName>
    <formula>NOT(ISPICKVAL(Auto_Enrollment__c, &quot;None&quot;)) &amp;&amp; NOT(ISBLANK(TEXT(Auto_Enrollment__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Auto-Enrollment is &quot;None&quot; or NULL, the box is unchecked. Otherwise, it is checked.</inlineHelpText>
    <label>Auto-Enrollment Plan</label>
    <type>Checkbox</type>
</CustomField>