force-app/main/default/objects/Plan__c/fields/Auto_Escalate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for data mapping from FT Williams. Does plan have AE with auto escalate?</description>
    <inlineHelpText>Used for data mapping from FT Williams. Does plan have AE with auto escalate?</inlineHelpText>
    <label>Auto Escalate</label>
    <type>Checkbox</type>
</CustomField>