force-app/main/default/objects/Plan__c/fields/Billable_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Billable_Headcount__c</fullName>
    <description>Deprecated 3/5/25- Eligible Employees + Terminated w Balance</description>
    <formula>Eligible_Employees_w_Balance__c  +  Terminated_w_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deprecated 3/5/25 Eligible Employees + Terminated w Balance</inlineHelpText>
    <label>Billable Headcount (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>