force-app/main/default/objects/Plan__c/fields/Billing_HM_Score__c.field-meta.xml
<CustomField>
    <fullName>Billing_HM_Score__c</fullName>
    <description>Current Billing Status = 1
Behind Billing Status = -1</description>
    <formula>IF( ISPICKVAL( Billing_Status__c , &quot;Current&quot;),1,-1)</formula>
    <inlineHelpText>Current Billing Status = 1
Behind Billing Status = -1</inlineHelpText>
    <label>Billing HM Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>