force-app/main/default/objects/Plan__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description>Indicates status of invoices.</description>
    <inlineHelpText>Indicates status of invoices.</inlineHelpText>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Behind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>