force-app/main/default/objects/Plan__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>