force-app/main/default/objects/Plan__c/fields/Bond_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bond_Amount__c</fullName>
    <description>Bond Amount Held for the Plan. Usually entered by Compliance.</description>
    <inlineHelpText>Bond Amount Held for the Plan. Usually entered by Compliance.</inlineHelpText>
    <label>Bond Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>