force-app/main/default/objects/Plan__c/fields/Bond_Asset_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Bond_Asset_Ratio__c</fullName>
    <description>Fidelity Bond Amount ratio to Plan Assets</description>
    <formula>Bond_Amount__c / Plan_Assets__c</formula>
    <inlineHelpText>Fidelity Bond Amount ratio to Plan Assets</inlineHelpText>
    <label>Bond/Asset Ratio</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>