force-app/main/default/objects/Plan__c/fields/Bond_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Bond_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fidelity Bond is auto-renewed.   No set expiration date.</description>
    <inlineHelpText>Fidelity Bond is auto-renewed.   No set expiration date.</inlineHelpText>
    <label>Bond Auto Renew</label>
    <type>Checkbox</type>
</CustomField>