force-app/main/default/objects/Plan__c/fields/Bond_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Bond_Expiration_Date__c</fullName>
    <description>Date fidelity bond expires.   Leave blank and check &quot;Bond Auto Renew&quot; if there is no expiration and the bond auto renews</description>
    <inlineHelpText>Date fidelity bond expires.   Leave blank and check &quot;Bond Auto Renew&quot; if there is no expiration and the bond auto renews</inlineHelpText>
    <label>Bond Expiration Date</label>
    <type>Date</type>
</CustomField>