force-app/main/default/objects/Plan__c/fields/Bond_Information_Added_to_Paradigm__c.field-meta.xml
<CustomField>
    <fullName>Bond_Information_Added_to_Paradigm__c</fullName>
    <description>Has Bond information been added tp Paradigm?</description>
    <inlineHelpText>Has Bond information been added tp Paradigm?</inlineHelpText>
    <label>Bond Information Added to Paradigm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>