force-app/main/default/objects/Plan__c/fields/Bond_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Bond_Purchase_Date__c</fullName>
    <description>Date of Fidelity Bond purchase.</description>
    <inlineHelpText>The date the bond purchase request was sent to the provider</inlineHelpText>
    <label>Bond Purchase Date</label>
    <type>Date</type>
</CustomField>