force-app/main/default/objects/Plan__c/fields/Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Business_Industry__c</fullName>
    <description>Business/Industry from Account</description>
    <formula>TEXT(Account__r.Business_Industry__c)</formula>
    <inlineHelpText>Business/Industry from Account</inlineHelpText>
    <label>Business/Industry</label>
    <type>Text</type>
</CustomField>