force-app/main/default/objects/Plan__c/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <description>Business Start Date pulled from Account</description>
    <formula>Account__r.Business_Start_Date__c</formula>
    <inlineHelpText>Business Start Date pulled from Account</inlineHelpText>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>