force-app/main/default/objects/Plan__c/fields/CARES_Act_Amendment__c.field-meta.xml
<CustomField>
    <fullName>CARES_Act_Amendment__c</fullName>
    <description>Date client signed CARES Act Amendment to add it to their plan</description>
    <inlineHelpText>Date client signed CARES Act Amendment to add it to their plan</inlineHelpText>
    <label>CARES Act Amendment</label>
    <type>Date</type>
</CustomField>