force-app/main/default/objects/Plan__c/fields/CARES_Act_Declined__c.field-meta.xml
<CustomField>
    <fullName>CARES_Act_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client does not want to adopt CARES Act</description>
    <inlineHelpText>Client does not want to adopt CARES Act</inlineHelpText>
    <label>CARES Act Declined</label>
    <type>Checkbox</type>
</CustomField>