force-app/main/default/objects/Plan__c/fields/CARES_Act_Distribution_Signer__c.field-meta.xml
<CustomField>
    <fullName>CARES_Act_Distribution_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sponsor/Trustee authorized to DocuSign/Esign CARES Act Distribution Forms for this plan</description>
    <inlineHelpText>Sponsor/Trustee authorized to DocuSign/Esign CARES Act Distribution Forms for this plan</inlineHelpText>
    <label>CARES Act Distribution Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CARES Act Signer</relationshipLabel>
    <relationshipName>Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>