force-app/main/default/objects/Plan__c/fields/Client_Health__c.field-meta.xml
<CustomField>
    <fullName>Client_Health__c</fullName>
    <description>Client Health Score Expressed Visually</description>
    <formula>IF( Client_Health_Score__c  &gt;= 90,IMAGE(&quot;/resource/CH_Happiest&quot;, &quot;Happiest HM&quot;,30,30), 
IF( Client_Health_Score__c  &gt;= 70,IMAGE(&quot;/resource/CH_Happy&quot;, &quot;Happy HM&quot;,30,30), 
IF( Client_Health_Score__c  &gt;= 50,IMAGE(&quot;/resource/CH_Neutral&quot;, &quot;Neutral HM&quot;,30,30), 
IF( Client_Health_Score__c  &gt;= 20,IMAGE(&quot;/resource/CH_Unhappy&quot;, &quot;Unhappy HM&quot;,30,30), 
IF( Client_Health_Score__c  &gt;= 0,IMAGE(&quot;/resource/CH_Mad&quot;, &quot;Mad HM&quot;,30,30), 
IMAGE(&quot;/resource/CH_Unknown&quot;, &quot;Unknown&quot;,30,30) 
)))))</formula>
    <inlineHelpText>Client Health Score Expressed Visually</inlineHelpText>
    <label>Client Health</label>
    <type>Text</type>
</CustomField>