force-app/main/default/objects/Plan__c/fields/Client_Health_Information__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Information__c</fullName>
    <description>Automated process indicates positive and negative metrics that are affecting the clients health.</description>
    <inlineHelpText>Automated process indicates positive and negative metrics that are affecting the clients health.</inlineHelpText>
    <label>Client Health Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>