force-app/main/default/objects/Plan__c/fields/Client_Health_Metric_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Metric_Score__c</fullName>
    <description>Health score based on 7 different plan metrics and behaviors with separate weighting.</description>
    <formula>((Billing_HM_Score__c*0.25)+(Payroll_HM_Score__c*0.25)+(CSAT_HM_Score__c*0.1)+(NPS_HM_Score__c*0.12)+(Sentiment_HM_Score__c*0.06)+(Review_HM_Score__c*0.12)+(Referral_HM_Score__c*0.1))*100</formula>
    <inlineHelpText>Health score based on 7 different plan metrics and behaviors with separate weighting.</inlineHelpText>
    <label>Client Health Metric Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>