force-app/main/default/objects/Plan__c/fields/Client_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Score__c</fullName>
    <description>Client Health Score Calculated by Process Builder</description>
    <inlineHelpText>Client Health Score Calculated by Process Builder</inlineHelpText>
    <label>Client Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>