force-app/main/default/objects/Plan__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>