force-app/main/default/objects/Plan__c/fields/Complete_without_funding__c.field-meta.xml
<CustomField>
    <fullName>Complete_without_funding__c</fullName>
    <formula>Implementation__r.Complete_without_funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete without funding</label>
    <type>Checkbox</type>
</CustomField>