force-app/main/default/objects/Plan__c/fields/Completed_Self_Service_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Completed_Self_Service_Onboarding__c</fullName>
    <formula>Implementation__r.Census_Self_Service__c
&amp;&amp;
ISPICKVAL( Implementation__r.Implementation_Status__c , &quot;Completed&quot;)</formula>
    <label>Completed Self-Service Onboarding</label>
    <type>Checkbox</type>
</CustomField>