force-app/main/default/objects/Plan__c/fields/Conversion_Assets_Posted__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets_Posted__c</fullName>
    <formula>Implementation__r.Conversion_Assets_Posted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Assets Posted</label>
    <type>Date</type>
</CustomField>