force-app/main/default/objects/Plan__c/fields/Conversion_Assets_Recieived__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets_Recieived__c</fullName>
    <formula>Implementation__r.Assets_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Assets Recieived</label>
    <type>Date</type>
</CustomField>