force-app/main/default/objects/Plan__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <description>What type of conversion plan was this?</description>
    <inlineHelpText>What type of conversion plan was this?</inlineHelpText>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard 401(k) Plan</fullName>
            </value>
            <value>
                <fullName>PEO 401(k) Plan</fullName>
            </value>
            <value>
                <fullName>Solo 401(k) Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>