force-app/main/default/objects/Plan__c/fields/CSAT_HM_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_HM_Score__c</fullName>
    <description>CSAT Saver weighted 20% &amp; CSAT Sponsor/Trustee weighted at 80%</description>
    <formula>IF( 
(ISNULL(Most_Recent_CSAT_Score_Saver__c)= True &amp;&amp; ISNULL(Most_Recent_CSAT_Score_Sponsor_Trustee__c)= False),
CASE((Most_Recent_CSAT_Score_Sponsor_Trustee__c), 1, -1, 2, -1,3,0,4,1,5,1,0),
IF(
(ISNULL(Most_Recent_CSAT_Score_Saver__c)= False &amp;&amp; ISNULL(Most_Recent_CSAT_Score_Sponsor_Trustee__c)=True),
CASE((Most_Recent_CSAT_Score_Saver__c), 1, -1, 2, -1,3,0,4,1,5,1,0),
IF(
(ISNULL(Most_Recent_CSAT_Score_Saver__c)= False &amp;&amp; ISNULL(Most_Recent_CSAT_Score_Sponsor_Trustee__c)=False), 
CASE(ROUND((Most_Recent_CSAT_Score_Saver__c*0.2)+(Most_Recent_CSAT_Score_Sponsor_Trustee__c*0.8),0), 1, -1, 2, -1,3,0,4,1,5,1,0),0)))</formula>
    <inlineHelpText>CSAT Saver weighted 20% &amp; CSAT Sponsor/Trustee weighted at 80%</inlineHelpText>
    <label>CSAT HM Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>