force-app/main/default/objects/Plan__c/fields/CST_Client_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>CST_Client_Support_Team__c</fullName>
    <description>CST associated with this Plan</description>
    <inlineHelpText>CST associated with this Plan</inlineHelpText>
    <label>CST (Client Support Team)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Support</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Green Street Elite</fullName>
                <isActive>false</isActive>
                <label>Green Street Elite</label>
            </value>
            <value>
                <fullName>Life Savers</fullName>
                <isActive>false</isActive>
                <label>Life Savers</label>
            </value>
            <value>
                <fullName>The Orange Bombers</fullName>
                <isActive>false</isActive>
                <label>The Orange Bombers</label>
            </value>
            <value>
                <fullName>Zenefits</fullName>
                <isActive>false</isActive>
                <label>Zenefits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>