force-app/main/default/objects/Plan__c/fields/Current_Annual_Participant_Fees__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Participant_Fees__c</fullName>
    <description>How much are Participant Fees Annual? Based on last plan billable headcount.</description>
    <formula>(Plan_Billable_Headcount__c * Participant_Fee__c)*12</formula>
    <inlineHelpText>How much are Participant Fees Annual? Based on last plan billable headcount.</inlineHelpText>
    <label>Current Annual Participant Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>