force-app/main/default/objects/Plan__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Custodian</valueSetName>
    </valueSet>
</CustomField>