force-app/main/default/objects/Plan__c/fields/Custodian_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Custodian_Account_ID__c</fullName>
    <label>Custodian Account ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>