force-app/main/default/objects/Plan__c/fields/Date_Most_Recent_Saver_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Date_Most_Recent_Saver_CSAT__c</fullName>
    <description>Date of the most recent Saver CSAT</description>
    <inlineHelpText>Date of the most recent Saver CSAT</inlineHelpText>
    <label>Date Most Recent Saver CSAT</label>
    <type>Date</type>
</CustomField>