force-app/main/default/objects/Plan__c/fields/Date_Most_Recent_Saver_NPS__c.field-meta.xml
<CustomField>
    <fullName>Date_Most_Recent_Saver_NPS__c</fullName>
    <description>Date of the Most Recent Saver NPS</description>
    <inlineHelpText>Date of the Most Recent Saver NPS</inlineHelpText>
    <label>Date Most Recent Saver NPS</label>
    <type>Date</type>
</CustomField>