force-app/main/default/objects/Plan__c/fields/Date_Most_Recent_Saver_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Most_Recent_Saver_Review__c</fullName>
    <description>Date of the Most Recent Saver Review</description>
    <inlineHelpText>Date of the Most Recent Saver Review</inlineHelpText>
    <label>Date Most Recent Saver Review</label>
    <type>Date</type>
</CustomField>