force-app/main/default/objects/Plan__c/fields/Date_Most_Recent_Sponsor_Trustee_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Date_Most_Recent_Sponsor_Trustee_CSAT__c</fullName>
    <description>Date of the Most Recent Sponsor/Trustee CSAT</description>
    <inlineHelpText>Date of the Most Recent Sponsor/Trustee CSAT</inlineHelpText>
    <label>Date Most Recent Sponsor/Trustee CSAT</label>
    <type>Date</type>
</CustomField>