force-app/main/default/objects/Plan__c/fields/Date_Most_Recent_Sponsor_Trustee_NPS__c.field-meta.xml
<CustomField>
    <fullName>Date_Most_Recent_Sponsor_Trustee_NPS__c</fullName>
    <description>Date of the Most Recent Sponsor/Trustee NPS</description>
    <inlineHelpText>Date of the Most Recent Sponsor/Trustee NPS</inlineHelpText>
    <label>Date Most Recent Sponsor/Trustee NPS</label>
    <type>Date</type>
</CustomField>