force-app/main/default/objects/Plan__c/fields/Date_Most_Recent_Sponsor_Trustee_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Most_Recent_Sponsor_Trustee_Review__c</fullName>
    <description>Date of the Most Recent Sponsor/Trustee Review</description>
    <inlineHelpText>Date of the Most Recent Sponsor/Trustee Review</inlineHelpText>
    <label>Date Most Recent Sponsor/Trustee Review</label>
    <type>Date</type>
</CustomField>