force-app/main/default/objects/Plan__c/fields/Date_of_Most_Recent_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Referral__c</fullName>
    <description>Date most recent referral was given by Plan</description>
    <inlineHelpText>Date most recent referral was given by Plan</inlineHelpText>
    <label>Date of Most Recent Referral</label>
    <type>Date</type>
</CustomField>