force-app/main/default/objects/Plan__c/fields/Days_Behind_on_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Days_Behind_on_Payroll__c</fullName>
    <description>Looks at the most recent payroll date and payroll frequency and compares to today. Slight buffer built into each frequency.</description>
    <formula>TODAY()- ( End_of_Submitted_Pay_Period__c + Payroll_Frequency_Days__c )</formula>
    <inlineHelpText>Looks at the most recent payroll date and payroll frequency and compares to today. Slight buffer built into each frequency.</inlineHelpText>
    <label>Days Behind on Payroll</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>