force-app/main/default/objects/Plan__c/fields/Days_Past_Due_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due_on_Invoice__c</fullName>
    <description>Number of days past due on invoice(s)</description>
    <inlineHelpText>Number of days past due on invoice(s)</inlineHelpText>
    <label>Days Past Due on Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>0-30 Days</fullName>
            </value>
            <value>
                <fullName>31-60 Days</fullName>
            </value>
            <value>
                <fullName>61-90 Days</fullName>
            </value>
            <value>
                <fullName>&gt;90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>