force-app/main/default/objects/Plan__c/fields/Days_since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Activity__c</fullName>
    <description>Number of days since Sponsor or Trustee had activity on a Case linked to this Plan</description>
    <formula>TODAY()- Last_Case_Activity_Date__c</formula>
    <inlineHelpText>Number of days since Sponsor or Trustee had activity on a Case linked to this Plan</inlineHelpText>
    <label>Days since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>