force-app/main/default/objects/Plan__c/fields/Deferral_Change_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Change_Frequency__c</fullName>
    <label>Deferral Change Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deferral_Change_Frequency</valueSetName>
    </valueSet>
</CustomField>